<resources>
    <!-- Stringhe di utilità-->
    <string name="app_name">MyUnibaApp</string>
    <string name="open_drawer" translatable="false">Open Navigation Drawer</string>
    <string name="close_drawer" translatable="false">Close Navigation Drawer</string>

    <!-- Stringhe per il login-->
    <string name="title_activity_login">Effettua il Login</string>
    <string name="welcome">Benvenuto in MyUnibApp</string>
    <string name="access_to_continue">ACCEDI PER CONTINUARE</string>
    <string name="remember_credentials">Ricorda credenziali</string>
    <string name="or">Oppure</string>
    <string name="ospite_login">accedi come ospite</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="login_success">Benvenuto </string>
    <string name="invalid_username">Nome utente o email non valido</string>
    <string name="invalid_password">Password sbagliata</string>
    <string name="forgot_password">HAI DIMENTICATO LA PASSWORD?</string>

    <!-- Oggetti nel menu principale-->
    <string name="functionality">Funzionalità</string>
    <string name="home">Pagina iniziale</string>
    <string name="segretary">Segreteria</string>
    <string name="chat">Conversazioni</string>
    <string name="booklet">Libretto</string>
    <string name="exams">Esami</string>
    <string name="exams_list">Elenco esami</string>
    <string name="bookings_board">Bacheca prenotazioni</string>
    <string name="outcome_board">Bacheca esiti</string>
    <string name="profile">Profilo</string>
    <string name="visualize_profile">Visualizza profilo</string>
    <string name="information">Informazioni</string>
    <string name="who_we_are">Chi siamo</string>
    <string name="settings">Impostazioni</string>
    <string name="exit">Esci</string>

    <!-- Schermata home-->
    <string name="widgets">Aggiungi widgets</string>

    <string name="exitDialogTitle">Chiusura dell\'applicazione</string>
    <string name="exitDialogMessage">Sei sicuro di voler terminare la sessione di utilizzo dell\'app?</string>
    <string name="dialogConfirm">Conferma</string>
    <string name="dialogDecline">Annulla</string>

    <string-array name="home_widgets_descriptions">
        <item>La segreteria ti permette di svolgere le pratiche di carattere burocratico</item><!--Segreteria-->
        <item>Comunica con i tuoi colleghi o con i professori, anche scambiando documenti</item><!--Chat-->
        <item>Con il libretto puoi ricevere informazioni utili sulla tua carriera universitaria</item><!--Libretto-->
        <item>Puoi prenotare gli esami che hai ancora in programma da svolgere</item><!--Elenco esami-->
        <item>Gestisci le prenotazioni</item><!--Bacheca prenotazioni-->
        <item>Visualizza l\'andamento degli esami che hai affrontato</item><!--Bacheca esiti-->
        <item>Ricevi le informazioni associate al tuo account universitario</item><!--Profilo-->
    </string-array>

    <string-array name="professor_home_widgets_descriptions">
        <item>Definisci un nuovo appello associato ai tuoi insegnamenti</item><!--Aggiunta esame-->
        <item>Inserisci l\'andamento dei tuoi studenti che hanno affrontato un esame</item><!--Valutazione studenti-->
        <item>Modifica i dettagli degli esami da te creati in precedenza</item><!--Modifica esame-->
        <item>Ricevi le informazioni associate al tuo account</item><!--Profilo-->
        <item>Comunica con i tuoi studenti</item><!--Chat-->
        <item>Impostazioni</item><!--Impostazioni-->
    </string-array>

    <!-- Sensore di impronte-->
    <string name="fingerPrintDialogTitle">Login biometrico per "MyUnibApp"</string>
    <string name="fingerPrintDialogNegativeButton">Annulla</string>
    <string name="fingerPrintDialogDescription">Accedi usando le tue credenziali biometriche</string>


    <!-- Esami prenotabili-->
    <plurals name="exams_to_pass">
        <item quantity="one">Ti rimane un esame da superare</item>
        <item quantity="other">Ti rimangono %d esami da superare </item>
    </plurals>
    <plurals name="bookable_exams">
        <item quantity="one">È disponibile un solo esame da prenotare</item>
        <item quantity="other">Sono disponibili %d esami da prenotare</item>
    </plurals>
    <string name="zero_exams_to_book">Non sono disponibili appelli per questo esame</string>
    <string name="zero_exam_outcomes">Nessun esito da mostrare</string>

    <!-- Bacheca prenotazioni-->
    <string name="dismiss_booking">Cancella prenotazione</string>

    <!-- Chat-->
    <string name="type_something">Scrivi qualcosa</string>

    <!-- Dettagli esami-->
    <string name="course">Materia:</string>
    <string name="type">Tipo prova:</string>
    <string name="date">Data esame:</string>
    <string name="building">Edificio:</string>
    <string name="room">Aula:</string>
    <string name="professor">Docente:</string>
    <string name="outcome">Esito:</string>
    <string name="accept">Accetta</string>
    <string name="refuse_and_back">Rifiuta e torna indietro</string>
    <string name="back">Torna indietro</string>
    <string name="back_message">L\'esame rimarrà nella bacheca esiti fino ad una rimozione manuale da parte degli amministratori</string>

    <!-- Libretto-->
    <string name="show_details">Maggiori informazioni</string>
    <string name="hide_details">Nascondi dettagli</string>
    <string name="activities">Attività didattiche</string>
    <string name="year">Anno</string>
    <string name="credits">Peso in crediti</string>
    <string name="state">Stato</string>
    <string name="outcome_booklet">Voto</string>
    <string name="date_booklet">Data esame</string>
    <string name="arithmetic_mean">Media aritmetica: %.2f</string>
    <string name="weighted_mean">Media ponderata: %.2f</string>
    <string name="percentage">Percentuale esami superati: %d%%</string>

    <!-- Profilo-->
    <string name="general">Informazioni generali</string>
    <string name="surname">Cognome</string>
    <string name="name">Nome</string>
    <string name="identification">Matricola</string>
    <string name="course_profile">Corso di laurea</string>
    <string name="course_name">Nome corso di laurea</string>
    <string name="path">Percorso</string>
    <string name="venue">Sede</string>
    <string name="subscription">Iscrizione</string>
    <string name="state_profile">Stato</string>
    <string name="clazz">Classe</string>
    <string name="regulament_year">Anno di regolamento</string>
    <string name="subscription_year">Ordinamento</string>
    <string name="regulation">Normativa</string>

    <!-- Impostazioni-->

    <string-array name="language_items">
        <item>Predefinito di sistema</item>
        <item>Italiano</item>
        <item>English</item>
        <item>Français</item>
        <item>Deutsche</item>
    </string-array>

    <string-array name="language_abbreviations">
        <item>System</item>
        <item>it</item>
        <item>en</item>
        <item>fr</item>
        <item>de</item>
    </string-array>

    <string name="settings_activity">Impostazioni</string>
    <string name="fingerprints">Sblocco con le impronte digitali:</string>
    <string name="language">Lingua</string>
    <string name="settings_dismiss">Annulla</string>
    <string name="settings_confirm">Salva modifiche</string>
    <string name="settings_message">Affinché avvenga il cambio della lingua occorre riavviare l\'applicazione</string>
    <string name="image_of_profile">Immagine di profilo</string>
    <string name="matricola">Matricola:</string>
    <string name="title_activity_luoghi_di_interesse">Mappa</string>

    <!-- Professori-->

    <string name="aggiunta_date">Crea appello</string>
    <string name="valutazione_studenti">Valuta studenti</string>
    <string name="gestione_appelli">Gestisci appelli</string>
    <string name="profilo_professori">Profilo</string>

    <string name="aula_professori">Aula per ricevimenti</string>
    <string name="insegnamenti_professori">Insegnamenti</string>

    <string name="aggiunta_esame">Aggiungi esame</string>
    <string name="insegnamento">Insegnamento:</string>
    <string name="numero_esame">Numero esame:</string>

    <string name="aggiunta_esame_error">Devi definire tutti i dati prima di poter creare o modificare una data per l\'esame</string>
    <string name="aggiunta_esito_error">Devi dare un esito e aver selezionato uno studente per poter continuare</string>

    <string name="modifica_esame">Modifica esame</string>
    <string name="rimozione_esame">Rimuovi esame</string>

    <string name="modifica_esame_conferma_titolo">Sicuro?</string>
    <string name="modifica_esame_conferma_messaggio">Modificare o eliminare i dati dell\'esame può creare disagi se non si compie questa azione con un motivo valido</string>
    <string name="ciao_studente">"Benvenuto "</string>
    <string name="inserisci_le_credenziali">Inserisci le credenziali</string>
    <string name="text_fingerprint">Puoi disattivare in qualsiasi momento il riconoscimento biometrico nella sezione <strong> Sicurezza </strong></string>
    <string name="text_noFingerprint">Il dispositivo non ha il sensore per il riconoscimento dell\'impronta</string>
    <string name="pagamenti">Pagamenti</string>
    <string name="test_concorsi">Test/Concorsi</string>
    <string name="immatricolazione">Immatricolazione</string>
    <string name="borsa_di_studio">Borsa di studio</string>
    <string name="documenti_identit">Documenti identità</string>
    <string name="contatti">Contatti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>