<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/segretary" />

    <CheckBox
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat" />

    <CheckBox
        android:id="@+id/option3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booklet" />

    <CheckBox
        android:id="@+id/option4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exams_list" />

    <CheckBox
        android:id="@+id/option5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookings_board" />

    <CheckBox
        android:id="@+id/option6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outcome_board" />

    <CheckBox
        android:id="@+id/option7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visualize_profile" />

    <CheckBox
        android:id="@+id/option8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Agenda" />

</LinearLayout>