<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="1000px"
        android:layout_height="match_parent"
        android:background="@drawable/widgets_background"
        android:layout_marginStart="30dp"
        tools:ignore="PxUsage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/course"
                android:textSize="20sp"
                android:textStyle="bold|italic"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/nome_esame_esito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Placeholder"
                android:textColor="#0000aa"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outcome"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <sms.myunibapp.advancedViews.ExamOutcomeCustomDrawing
                android:id="@+id/esito"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/data_esito_esame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Placeholder"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professor"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/docente_bacheca_esiti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Placeholder"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="96dp" />

            <Button
                android:id="@+id/accettazione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/refuse_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refuse_and_back" />

        </LinearLayout>

    </ScrollView>

</merge>